--- a/index.html
+++ b/index.html
@@ -1,266 +1,289 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ichigo</title>
-    <link rel="stylesheet" href="style.css"> 
-    <link rel="stylesheet" href="css/bootstrap.css">
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    font-family: 'Jost', sans-serif;
+    list-style: none
+}
+header{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 10%;
+}
+.logo img{
+    max-width: 120px;
+    height: auto;
+}
+.navmenu{
+    display: flex;
+}
+.navmenu a{
+    color: #2c2c2c;
+    font-size: 16px;
+    font-family: monospace;
+    text-transform: capitalize;
+    padding: 10px 20px;
+    font-weight: 400;
+    transition: all .42s ease;
+}
+.navmenu a:hover{
+    color: #FF9494;
+}
+.nav-icon{
+    display: flex;
+    align-items: center;
+}
+.nav-icon i{
+    margin-right: 20px;
+    color: #2c2c2c;
+    font-size: 25px;
+    font-weight: 400;
+    transition: all .42s ease;
+}
+.nav-icon i:hover{
+    transform: scale(1.1);
+    color: #FF9494;
+}
+#menu-icon{
+    font-size: 35px;
+    color: #2c2c2c;
+    z-index: 10001;
+    cursor: pointer;
+}
+section{
+    padding: 5% 10%;
+}
+.main-home{
+    width: 100%;
+    height: 100vh;
+    background-image: url(2.jpeg);
+    background-position: center;
+    background-size: cover;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    align-items: center;
+}
+.main-text h5{
+    color: #9C254D;
+    font-size: 18px;
+    text-transform: capitalize;
+    font-weight: 500;
+}
+.main-text h1{
+    color: black;
+    font-size: 65px;
+    text-transform: capitalize;
+    line-height: 1.1;
+    font-weight: 600;
+    margin: 6px 0 10px;
+}
+.main-text p{
+    color: #333c56;
+    font-size: 20px;
+    font-style: italic;
+    margin-bottom: 20px;
+}
+.main-btn{
+    display: inline-block;
+    color: #111;
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: capitalize;
+    border: 2px solid #111;
+    border-radius: 25px;
+    padding: 12px 25px;
+    transition: all .42s ease;
+}
+.main-btn:hover{
+    background-color: black;
+    color: #FF9494;
+}
+.main-btn i{
+    vertical-align: middle;
+}
+.down-arrow{
+    position: absolute;
+    top: 85%;
+    right: 11%;
+}
+.down i{
+    font-size: 30px;
+    color: #2c2c2c;
+    border: 2px solid #2c2c2c;
+    border-radius: 50px;
+    padding: 12px 12px;
+}
+.down i:hover{
+    background-color: #2c2c2c;
+    color: #FF9494;
+    transition: all .42s ease;
+}
+header.sticky{
+    background: #fff;
+    padding: 20px 10%;
+    box-shadow: 0px 0px 10px rgb(0 0 0 / 10%);
+}
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,700;1,600&display=swap" rel="stylesheet">
+/* trending-css */
+.center-text h2{
+    color: #111;
+    font-size: 28px;
+    text-transform: capitalize;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.center-text span{
+    color: #9C254D;
+}
+.products{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+    gap: 2rem;
+}
+.row{
+    position: relative;
+    transition: all .40s;
+}
+.row img{
+    width: 100%;
+    height: auto;
+    transition: all .40s;
+}
+.row img:hover{
+    transform: scale(0.9);
+}
+.products-text h5{
+    position: absolute;
+    top: 13px;
+    left: 13px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 500;
+    text-transform: uppercase;
+    background-color: aquamarine;
+    padding: 3px 10px;
+    border-radius: 2px;
+}
+.heart-icon{
+    position: absolute;
+    right: 0;
+    font-size: 20px;
+}
+.heart-icon:hover{
+    color: red;
+}
+.rating i{
+    color: rgb(181, 129, 33);
+    font-size: 18px;
+}
+.price h4{
+    color: #111;
+    font-size: 16px;
+    text-transform: capitalize;
+    font-weight: 400;
+}
+.price p{
+    color: #151515;
+    font-size: 14px;
+    font-weight: 600;
+}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js" integrity="sha512-pAsRTl9rmH5O5qdLMlVnkjl+Y1HiB11CAm7A00tBO3R0tiJKabau78ylMf2izyej6osN490WwB1I/WQ4bMzz/Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+/* owner */
+.owner-tatya{
+    background-color: #FFD1D1;
+}
+.owner{
+    text-align: center;
+}
+.owner h3{
+    color: #111;
+    font-size: 25px;
+    text-transform: capitalize;
+    text-align: center;
+    font-weight: 700;
+}
+.owner img{
+    width: 100px;
+    height: auto;
+    border-radius: 50%;
+    margin: 10px 0;
+}
+.owner p{
+    color: #707070;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25px;
+    margin-bottom: 10px;
+}
+.owner h2{
+    font-size: 22px;
+    color: #000;
+    font-weight: 400;
+    text-transform: capitalize;
+    margin-bottom: 2px;
+}
+.form1{
+    font-family: monospace;
+    text-align: left;
+    margin-top: 3px;
+}
+.form2{
+    font-family: monospace;
+    text-align: left;
+    margin-bottom: 3px;
+}
+.button2{
+    margin-top: 15px;
+}
+/* responsive */
+@media(max-width:890px){
+    header{
+        padding: 20px 3%;
+        transition: .4s;
+    }
+}
+@media(max-width:630px){
+    .main-text h1{
+        font-size: 50px;
+        transition: .4s;
+    }
+    .main-text p{
+        font-size: 18px;
+        transition: .4s;
+    }
+    .main-btn{
+        padding: 10px 20px;
+        transition: .4s;
+    }
+}
 
-<link rel="stylesheet"
-  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+@media(max-width:750px){
+    .navmenu{
+        position: absolute;
+        top: 100%;
+        right: -100%;
+        width: 300px;
+        height: 130vh;
+        background: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 120px 30px;
+        transition: all .42s;
+    }
+    .navmenu a{
+        display: block;
+        margin: 18px 0;
+    }
+    .navmenu.open{
+        right: 0;
+    }
+}
 
-</head>
-<body>
-
-    <header>
-        <a href="#" class="logo"><img src="ichigofoto.png" alt=""></a>
-       
-        <ul class="navmenu">
-            <li><a href="">Home</a></li>
-            <li><a href="">Shop</a></li>
-            <li><a href="">Products</a></li>
-            <li><a href="">Page</a></li>
-            <li><a href="">Docs</a></li>
-        </ul>
-        <div class="nav-icon">
-            <a href="#"><i class='bx bx-search'></i></a>
-            <a href="#"><i class='bx bx-user' ></i></a>
-            <a href="#"><i class='bx bx-cart' ></i></a>
-
-            <div class="bx bx-menu" id="menu-icon"></div>
-        </div>
-    </header>
-    
-    <section class="main-home">
-        <div class="main-text">
-            <h5>EVANGELION EDITION</h5>
-            <h1>New Arrivals <br> Collection 2023</h1>
-            <p>feel the authentic peace</p>
-
-            <a href="#" class="main-btn">Shop Now<i class='bx bx-right-arrow-alt' ></i></a>
-        </div>
-
-        <div class="down-arrow">
-            <a href="#trending" class="down"><i class='bx bx-chevron-down' ></i></a>
-        </div>
-    </section>
-
-    <!--trending-->
-    <section class="trending-product" id="trending">
-        <div class="center-text">
-            <h2>Our Trending <span>Products</span></h2>
-        </div>
-
-        <div class="products">
-            <div class="row">
-                <img src="a1.jpg" alt="">
-                <div class="product-text">
-                    <h5>EVANGELION Pullover Tactical Hoodie Jacket "Rei Ayanami"</h5>
-                </div>
-                <div class="heart-icon">
-                    <i class='bx bx-heart' ></i>
-                </div>
-                <div class="rating">
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                </div>
-
-                <div class="price">
-                    <h4>30 Sold</h4>
-                    <p>Rp550.000</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <img src="a3.jpg" alt="">
-                <div class="product-text">
-                    <h5>EVANGELION Pullover Hoodie Jacket "Asuka Langley"</h5>
-                </div>
-                <div class="heart-icon">
-                    <i class='bx bx-heart' ></i>
-                </div>
-                <div class="rating">
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bx-star' ></i>
-                </div>
-
-                <div class="price">
-                    <h4>14 sold</h4>
-                    <p>Rp550.000</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <img src="a2.jpg" alt="">
-                <div class="product-text">
-                    <h5>EVANGELION Collar Shirt "Asuka Langley"</h5>
-                </div>
-                <div class="heart-icon">
-                    <i class='bx bx-heart' ></i>
-                </div>
-                <div class="rating">
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star-half' ></i>
-                </div>
-
-                <div class="price">
-                    <h4>29 Sold</h4>
-                    <p>Rp450.000</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <img src="a4.jpg" alt="">
-                <div class="product-text">
-                    <h5>EVANGELION Collar Shirt "Unit-06"</h5>
-                </div>
-                <div class="heart-icon">
-                    <i class='bx bx-heart' ></i>
-                </div>
-                <div class="rating">
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star-half' ></i>
-                </div>
-
-                <div class="price">
-                    <h4>100+ Sold</h4>
-                    <p>Rp350.000</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <img src="a5.jpg" alt="">
-                <div class="product-text">
-                    <h5>EVANGELION Oversize Crewneck "The Eight Angels"</h5>
-                </div>
-                <div class="heart-icon">
-                    <i class='bx bx-heart' ></i>
-                </div>
-                <div class="rating">
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                </div>
-
-                <div class="price">
-                    <h4>13 Sold</h4>
-                    <p>Rp550.000</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <img src="a6.jpg" alt="">
-                <div class="product-text">
-                    <h5>EVANGELION Pullover Hoodie Jacket "Unit-01"</h5>
-                </div>
-                <div class="heart-icon">
-                    <i class='bx bx-heart' ></i>
-                </div>
-                <div class="rating">
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star-half' ></i>
-                </div>
-
-                <div class="price">
-                    <h4>40 Sold</h4>
-                    <p>Rp550.000</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <img src="a7.jpg" alt="">
-                <div class="product-text">
-                    <h5>EVANGELION Oversize Tactical Crewneck "Unit-01"</h5>
-                </div>
-                <div class="heart-icon">
-                    <i class='bx bx-heart' ></i>
-                </div>
-                <div class="rating">
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                </div>
-
-                <div class="price">
-                    <h4>70 Sold</h4>
-                    <p>Rp550.000</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <img src="a8.jpg" alt="">
-                <div class="product-text">
-                    <h5>EVANGELION Oversize Crewneck "01" Berserker</h5>
-                </div>
-                <div class="heart-icon">
-                    <i class='bx bx-heart' ></i>
-                </div>
-                <div class="rating">
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                    <i class='bx bxs-star' ></i>
-                </div>
-
-                <div class="price">
-                    <h4>26 Sold</h4>
-                    <p>Rp550.000</p>
-                </div>
-            </div>
-
-        </div>
-
-    </section>
-
-    <!--owner-->
-    <section class="owner-tatya">
-        <div class="owner">
-            <h3>PROFILE</h3>
-            <img src="tty.jpeg" alt="">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe necessitatibus iure ipsa odit exercitationem nihil voluptates ex vero sequi commodi voluptatum explicabo praesentium at, accusantium dignissimos nulla veritatis ipsum doloremque?</p>
-            <h2>Tatya Hanum Pramudita</h2>
-            <p>CEO of ichigoイチゴ</p>
-            <div class="form1">
-                <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-              </div>
-              <div class="form2">
-                <label for="exampleFormControlTextarea1" class="form-label">Massage</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                <div class="button2"><button type="button" class="btn btn-outline-dark">Submit</button></div>
-              </div>
-        </div>
-    </section>
-
-    <script src="java.js"></script>
-
-</body>
-</html>
