--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 </head>
 <body>
-
     <header>
         <a href="#" class="logo"><img src="ichigofoto.png" alt=""></a>
        
@@ -257,8 +256,23 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 <div class="button2"><button type="button" class="btn btn-outline-dark">Submit</button></div>
               </div>
+            <div class="logo2">
+                <img src="ichigofoto.png" alt="">
+                <div class="contact2">
+                    <p>0895367071196 <br> tatyahanum10p@gmail.com</p>
+                </div>
+            </div>
+              <div class="social">
+                <a href="#"><i class='bx bxl-instagram-alt'></i></i></a>
+                <a href="#"><i class='bx bxl-facebook-circle' ></i></i></a>
+                <a href="#"><i class='bx bxl-twitter' ></i></a>
+            </div>
         </div>
     </section>
+    
+    <div class="end-text">
+        <p>Copyright © @2023, All Right Reserved. Design by Tatya.</p>
+    </div>
 
     <script src="java.js"></script>
 
