--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="">Shop</a></li>
             <li><a href="">Products</a></li>
             <li><a href="">Page</a></li>
-            <li><a href="">Docs</a></li>
+            <li><a href="">About</a></li>
         </ul>
         <div class="nav-icon">
             <a href="#"><i class='bx bx-search'></i></a>
