--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>ichigoイチゴ</title>
     <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" href="css/bootstrap.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,700;1,600&display=swap" rel="stylesheet">
@@ -244,7 +243,7 @@
         <div class="owner">
             <h3>PROFILE</h3>
             <img src="tty.jpeg" alt="">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe necessitatibus iure ipsa odit exercitationem nihil voluptates ex vero sequi commodi voluptatum explicabo praesentium at, accusantium dignissimos nulla veritatis ipsum doloremque?</p>
+            <p>Hi all! My name is Tatya Hanum Pramudita, usually called tatya. I was born on June 10, 2004 in Gresik, East Java. I like developments in the world of IT technology,<br> such as 3D design, editing photos and videos, creating UIX designs, and many more. I am currently studying at Universitas Negeri Malang, Bachelor of Informatics <br> Engineering offering C class of 2022. In this web programming assignment, I created an E-commerce website.</p>
             <h2>Tatya Hanum Pramudita</h2>
             <p>CEO of ichigoイチゴ</p>
             <div class="form1">
